# wip_boggle_solver

./: .gitattributes  .gitignore  Cargo.toml
.github/workflows/: rust.yml
cli_solver/: Cargo.toml
cli_solver/src/: main.rs
data/: CSW19.txt
dictionary_builder/: Cargo.toml
dictionary_builder/src/: main.rs
dictionary_downloader/: Cargo.toml
dictionary_downloader/src/: main.rs
docs/: ideation.md  index.html
docs/cargo_out/: search-index.js  settings.html  source-files.js
docs/cargo_out/cli_solver/: all.html  fn.main.html  index.html  sidebar-items.js  struct.CLISolver.html
docs/cargo_out/dictionary_builder/: all.html  fn.main.html  index.html  sidebar-items.js  struct.DictionaryBuilder.html  type.CharBoolTrie.html
docs/cargo_out/grid_search/: all.html  fn.find_sequences_from_dict_in_grid.html  index.html  (+1 more)
docs/timesheets/: 0-First 83 minutes.html  1-Second 4.5 hours-to-grid_rs.html  10-mostly-working-solver.html  11-fixed-adjacency-bugs.html  2-trie-research.html  2.5-abandoned-dictionary-downloader.html  3-dictionary_builder.html  4-post_dict-solver-fiddling.html  5.1-swapping-to-own-data-structure.html  5.2-swapping-to-own-data-structure.html  6-small-refactors-and-a-lot-fruitless-borrow-checker-fighting.html  7.1-gridcell-smart-pointers.html  7.2-gridcell-smart-pointers.html  8-grid-into-modules.html  9-code-reorg-and-iter.html  index.html
grid_search/: Cargo.toml
grid_search/src/: dictionary.rs  grid.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
solver/: Cargo.toml
solver/src/: dictionary.rs  grid.rs
src/: grid.rs
(+39 files in other folders)
