[package]
name = "dictionary_builder"
version = "0.1.0"
authors = ["Donald Guy <donaldguy@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"

bincode = "1.3.3"
grid_search = {path = "../grid_search" }
